bugs.txt
# bugs.txt


++ dreaming since Aug/2022 ++

% cv |n
+ pbpaste

+ cat -n -tv - |expand

     1  .............................
     2  .....................................
     3  ....................
     4  ......................
     5  ............................
     6  ..............................
     7  ...............................
     8  ...............................
     9  ..................................................%                              %
%


% = dt.timedelta:days=45
Traceback (most recent call last):
  File "/Users/plavarre/Public/byobash/bin/byopyvm.py", line 2595, in <module>
    main()
  File "/Users/plavarre/Public/byobash/bin/byopyvm.py", line 348, in main
    parms_run_some(parms=alt_parms)
  File "/Users/plavarre/Public/byobash/bin/byopyvm.py", line 384, in parms_run_some
    parms_run_one(parms)
  File "/Users/plavarre/Public/byobash/bin/byopyvm.py", line 452, in parms_run_one
    parms_pyish(parms)  # such as:  dt.date dt.date:2022,4,8 -
  File "/Users/plavarre/Public/byobash/bin/byopyvm.py", line 660, in parms_pyish
    arg = ast.literal_eval(sharg)
  File "/Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/ast.py", line 62, in literal_eval
    node_or_string = parse(node_or_string.lstrip(" \t"), mode='eval')
  File "/Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/ast.py", line 50, in parse
    return compile(source, filename, mode, flags,
  File "<unknown>", line 1
    days=45
        ^
SyntaxError: invalid syntax
zsh: exit 1
%


++ dreaming since Jul/2022 ++


% = 'dt.datetime(2038, 1, 19)'
Traceback (most recent call last):
  File "/Users/plavarre/Public/byobash/bin/byopyvm.py", line 1943, in <module>
    main()
  File "/Users/plavarre/Public/byobash/bin/byopyvm.py", line 307, in main
    parms_run(parms=alt_parms)
  File "/Users/plavarre/Public/byobash/bin/byopyvm.py", line 352, in parms_run
    assert word in take_by_word.keys(), (word, parms)
AssertionError: ('SyntaxError', ['dt.datetime(2038, 1, 19)'])
zsh: exit 1
%


% cv |g
+ pbpaste

+ grep -i --color=yes .
alpha
bravo
charlie
delta
echo

foxtrot
%
